Completed crud operation and Started Exception Handling IN JPA

--- a/EmployeeManagementUsingJpa/src/main/resources/application.properties
+++ b/EmployeeManagementUsingJpa/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=EmployeeManagementUsingJpa
 
 # Database properties
-spring.datasource.url=jdbc:postgresql://localhost:5432/employeedb
+spring.datasource.url=jdbc:postgresql://localhost:5432/employeeData
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 
 # Hibernate Properties
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
