--- a/EmployeeManagementUsingJpa/build.gradle
+++ b/EmployeeManagementUsingJpa/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
+	implementation 'ch.qos.logback:logback-classic'
 }
 
 tasks.named('test') {
