--- a/EmployeeManagementUsingJpa/build.gradle
+++ b/EmployeeManagementUsingJpa/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
 	implementation 'ch.qos.logback:logback-classic'
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
 }
 
 tasks.named('test') {
