--- a/EmployeeManagementUsingJpa/build.gradle
+++ b/EmployeeManagementUsingJpa/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
 	implementation 'ch.qos.logback:logback-classic'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
