--- a/EmployeeManagementUsingJpa/build.gradle
+++ b/EmployeeManagementUsingJpa/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	implementation 'ch.qos.logback:logback-classic'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'redis.clients:jedis'
 }
 
 tasks.named('test') {
